# mauth

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  bacon.toml  lefthook.yml  package.json  pnpm-lock.yaml
.github/workflows/: check.yml
src/: app.rs  cli.rs  config.rs  error.rs  main.rs  state.rs
src/application/: mod.rs
src/application/admin_auth/: mod.rs
src/application/admin_users/: mod.rs
src/application/applications/: mod.rs
src/application/user_pools/: mod.rs
src/domain/: mod.rs
src/domain/applications/: mod.rs
src/domain/auth/: mod.rs
src/domain/user_pools/: mod.rs
src/domain/users/: mod.rs
src/entity/: admin_user.rs  application.rs  application_redirect_uri.rs  mod.rs  prelude.rs  user_pool.rs  user_pool_profile_field.rs
src/http/: middleware.rs  mod.rs
src/http/admin/: auth.rs  dto.rs  handlers.rs  mod.rs  routes.rs
src/http/applications/: dto.rs  handlers.rs  mod.rs  routes.rs
src/http/auth/: dto.rs  handlers.rs  routes.rs
src/http/health/: handlers.rs  routes.rs
src/http/user_pools/: dto.rs  handlers.rs  routes.rs
src/http/users/: dto.rs  handlers.rs  routes.rs
src/infrastructure/: mod.rs
src/infrastructure/applications/: mod.rs
src/infrastructure/auth/: crypto.rs  mod.rs  totp.rs
src/infrastructure/db/: mod.rs
src/infrastructure/user_pools/: mod.rs
src/infrastructure/users/: mod.rs
