[package]
name = "mauth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
http = "1"
sea-orm = { version = "2.0.0-rc.36", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "schema-sync", "with-chrono", "with-uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "compression-full", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
